--- a/css/styles.css
+++ b/css/styles.css
@@ -740,9 +740,6 @@ html, body {
 
 
 
-
-
-
 /* CONTACT DIV STARTS HERE */
 
 
@@ -750,6 +747,11 @@ html, body {
     width : 100%;
     font-family: 'Dosis',
     sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .contact-head {
     font-family: 'Chelsea Market',
