--- a/css/styles.css
+++ b/css/styles.css
@@ -475,6 +475,7 @@ section {
     height: 100px;
     padding: 1rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 3.5rem;
