--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ body.dark-theme .btn-secondary {
     color: var(--dark-theme-primary-color);
 }
 
-body.light-theme .btn:hover {
+.btn:hover {
     opacity: 0.9;
     transform: translateY(-5px);
     -webkit-transform: translateY(-5px);
@@ -266,7 +266,7 @@ nav.navbar {
     min-height: 10vh;
 }
 
-nav.navbar h1 {
+nav.navbar h1{
     --font-size: 1.8rem;
     --padding: 0.5rem;
     font-size: var(--font-size);
@@ -288,6 +288,14 @@ nav.navbar h1 {
     -o-transition: all 0.3s ease;
 }
 
+body.dark-theme a.logo-link, body.dark-theme a.logo-link:visited {
+    color: inherit;
+}
+
+body.light-theme a.logo-link, body.dark-theme a.logo-link:visited {
+    color: inherit;
+}
+
 body.light-theme nav.navbar h1 {
     border-color: var(--light-theme-secondary-color);
 }
@@ -296,7 +304,7 @@ body.dark-theme nav.navbar  h1 {
     border-color: var(--dark-theme-secondary-color);
 }
 
-nav.navbar  h1:hover {
+nav.navbar  h1:hover{ 
     border-color: var(--light-theme-primary-color);
     background-color: var(--light-theme-secondary-color);
     color: var(--light-theme-background-color)
@@ -422,7 +430,6 @@ body.dark-theme .hero-text {
     grid-area: text-content;
     max-width: max-content;
 }
-
 
 .hero-text strong.hero-name {
     display: block;
@@ -589,7 +596,18 @@ body.dark-theme .skill-list li.skill-list-item span.skill-icon:hover {
 
 .footer {
     background-color: var(--light-theme-secondary-background-color);
-    padding: var(--space-3);
+    min-height: max-content;
+}
+
+.footer-container {
+    margin: 0 auto;
+
+}
+
+.footer .social-links {
+    flex-wrap: wrap;
+    align-content: center;
+    gap: 1rem;
 }
 
 .footer .social-links li {
@@ -601,39 +619,73 @@ body.dark-theme .skill-list li.skill-list-item span.skill-icon:hover {
     -o-transition: all 0.3s cubic-bezier(0.5, 0, 0.5, 1);
 }
 
+.footer p > a {
+    color: inherit;
+}
+
 .footer p {
     font-size: 1.5rem;
+    margin: 0 var(--space-1-5);
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+}
+
+.footer p:hover {
+    color: var(--light-theme-secondary-color);
+    transform: translateY(-5px);
+    -webkit-transform: translateY(-5px);
+    -moz-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    -o-transform: translateY(-5px);
+}
+
+body.dark-theme .footer p:hover {
+    color: var(--dark-theme-secondary-color);
+}
+
+body.light-theme .footer p:hover {
+    color: var(--light-theme-secondary-color);
 }
 
 .footer .social-links li  i {
     font-size: 1.75rem;
 }
 
-.footer .social-links li:last-child {
-    margin-right: 0;
+.footer .social-links li a, 
+.footer .social-links li a:visited {
+    color: var(--light-theme-primary-color);
 }
 
-.footer .social-links li:first-child {
-    margin-left: 0;
+body.light-theme .footer .social-links li a,
+body.light-theme .footer .social-links li a:visited {
+    color: var(--light-theme-primary-color);
+}
+
+body.dark-theme .footer .social-links li a,
+body.dark-theme .footer .social-links li a:visited {
+    color: var(--dark-theme-primary-color);
 }
 
 .footer .social-links li:hover {
     transform: translateY(-5px);
-    -webkit-transform: translateY(-5px1.2);
-    -moz-transform: translateY(-5px1.2);
-    -ms-transform: translateY(-5px1.2);
-    -o-transform: translateY(-5px1.2);
+    -webkit-transform: translateY(-5px);
+    -moz-transform: translateY(-5px);
+    -ms-transform: translateY(-5px);
+    -o-transform: translateY(-5px);
 }
 
-.footer .social-links li:hover > * {
+.footer .social-links li:hover > a {
     color: var(--light-theme-secondary-color);
 }
 
-body.light-theme .footer .social-links li:hover > * {
+body.light-theme .footer .social-links li:hover  > a {
     color: var(--light-theme-secondary-color);
 }
 
-body.dark-theme .footer .social-links li:hover > * {
+body.dark-theme .footer .social-links li:hover > a {
     color: var(--dark-theme-secondary-color);
 }
 
@@ -644,8 +696,6 @@ body.light-theme .footer {
 body.dark-theme .footer {
     background-color: var(--dark-theme-secondary-background-color);
 }
-
-
 
 /* END OF FOOTER SECTION */
 
@@ -692,6 +742,7 @@ body.dark-theme .footer {
         grid-template-rows: max-content max-content;
         grid-template-columns: 1fr;
         width: 100%;
+        padding-top: var(--space-2);
     }
 
     .text-content {
@@ -741,7 +792,7 @@ body.dark-theme .footer {
     }
 
     .footer-container .social-links {
-        margin-top: var(--space-1-5);
+        margin-top: var(--space-3-5);
     }
 }
 
@@ -968,15 +1019,20 @@ body.dark-theme .footer {
     .skill-list li.skill-list-item span.skill-title {
         font-size: 0.9rem;   
     }
-    
+
     .footer p {
         font-size: 1.25rem;
+        margin: 0 var(--space-1-5);
     }
 
-    .footer .social-links li  i {
+    .footer .social-links {
+        gap: 1rem;
+        margin-top: var(--space-2);
+    }
+
+    .footer .social-links li i {
         font-size: 1.5rem;
     }
-
 }
 
 @media screen and (max-width: 300px) {
@@ -984,18 +1040,19 @@ body.dark-theme .footer {
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
     }
-    
+
     .footer p {
         font-size: 1rem;
-    }
-
-    .footer .social-links li  i {
-        font-size: 1.25rem;
+        margin: 0 var(--space-1-5);
     }
 
     .footer .social-links li {
-        margin: 0 var(--space-1);
-
+        margin:  0 var(--space-1);
     }
+
+    .footer .social-links li i {
+        font-size: 1.25rem;
+    }
+    
 }
 
