--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ img {
     max-width: 100%;
 }
 
-ul {
+ul, ol, .list-style-none {
     list-style: none;
 }
 
@@ -212,8 +212,13 @@ body.dark-theme .btn-secondary {
     width: 100%;
 }
 
-.section-head {
+.article-head {
+    margin: var(--space-1-5) 0;
     font-size: 1.75rem;
+}
+
+.section-head {
+    font-size: 2rem;
     width: 100%;
     margin-bottom: var(--space-2);
     padding-bottom: var(--space-0-5);
